<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/nav_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/home_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true">

                <EditText
                    android:id="@+id/search"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:imeOptions="actionDone"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/play_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/play_button_name"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ListView
                    android:id="@+id/search_results"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </ListView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/pause_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/pause_button_name"/>

                <Button
                    android:id="@+id/stop_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/stop_button_name"/>

                <Button
                    android:id="@+id/vol_up_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/vol_up_button_name"/>

                <Button
                    android:id="@+id/vol_down_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/vol_down_button_name"/>


            </LinearLayout>



            <ListView
                android:id="@+id/song_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </ListView>
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>